# SenseCAP-Watcher-Faces

./: .gitmodules  README.md
components/sscma_client/: CMakeLists.txt  idf_component.yml
components/sscma_client/include/: sscma_client_commands.h  sscma_client_flasher.h  sscma_client_io.h  sscma_client_ops.h  sscma_client_types.h
components/sscma_client/interface/: sscma_client_interface.h  sscma_client_io_interface.h
components/sscma_client/protocol/: sscma_client_proto.h
components/sscma_client/src/: sscma_client_flasher_we2.c  sscma_client_flasher_we2_spi.c  sscma_client_flasher_we2_uart.c  sscma_client_io.c  sscma_client_io_i2c.c  sscma_client_io_spi.c  sscma_client_io_uart.c  sscma_client_ops.c  sscma_client_proto.c  sscma_client_proto_xmodem.c
examples/factory_demo/main/: CMakeLists.txt  Kconfig.projbuild  config.h  ctrl_data.h  idf_component.yml  main.c  view_data.h
examples/factory_demo/main/app/: app_cmd.c  app_cmd.h  app_rgb.c  app_rgb.h  app_sensecap_https.c  app_sensecap_https.h  app_sensecraft.c  app_sensecraft.h  app_sscma_client.c  app_sscma_client.h  app_tasklist.c  app_tasklist.h  app_time.c  app_time.h  app_wifi.c  app_wifi.h  deviceinfo.h
examples/factory_demo/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_theme_manager.c  ui_themes.h
examples/factory_demo/main/ui/components/: ui_comp_hook.c
examples/factory_demo/main/ui/images/: ui_img_948016297.c  ui_img_battery_3_png.c  ui_img_battery_4_png.c  ui_img_cancel_png.c  ui_img_confirm_red_png.c  ui_img_seeed_logos_png.c  ui_img_ui_img__cancel_png.c  ui_img_ui_img_confirm_red_png.c  ui_img_ui_img_logo_png.c  ui_img_ui_img_setting_png.c  ui_img_ui_img_shutdown_png.c  ui_img_wifi_0_png.c  ui_img_wifi_2_png.c  ui_img_wifi_3_png.c  ui_img_wifi_4_png.c  ui_img_wifi_nonnet_png.c
examples/factory_demo/main/ui/screens/: ui_screen_ha_ctrl.c  ui_screen_ha_data.c  ui_screen_setting.c  ui_screen_shutdown.c  ui_screen_shutdown_confirm.c  ui_screen_startup.c  ui_ui_preview.c  ui_ui_setting.c  ui_ui_shutdown.c  ui_ui_shutdown_confirm.c  ui_ui_startup.c
examples/factory_demo/main/util/: storage.c  storage.h  util.c  util.h
examples/factory_demo/main/view/: view.c  view.h  view_alarm.c  view_alarm.h  view_group.c  view_image_preview.c  view_status_bar.c  view_status_bar.h
examples/factory_firmware/main/: CMakeLists.txt  Kconfig.projbuild  config.h  data_defs.h  event_loops.h  idf_component.yml  main.c
examples/factory_firmware/main/PageManager/: animation.c  animation.h  pm.c  pm.h  template.txt  ui_event.c
examples/factory_firmware/main/app/: app_audio.c  app_audio.h  app_audio_player.c  app_audio_player.h  app_audio_recorder.c  app_audio_recorder.h  app_ble.c  app_ble.c.del  app_ble.h  app_ble_gatt_svr.c  app_cmd.c  app_cmd.h  app_device_info.c  app_device_info.h  app_mqtt_client.c  app_mqtt_client.h  app_ota.c  app_ota.h  app_png.c  app_png.h  app_rgb.c  app_rgb.h  app_sensecaft.c  app_sensecap_https.c  app_sensecap_https.h  app_sensecap_mqtt.c  app_sensecraft.c  app_sensecraft.h  app_sensor.c  app_sensor.h  app_sr.c  app_sr.del  app_sr.h  app_sscma_client.c  app_sscma_client.h  app_taskengine.c  app_taskengine.h  app_taskflow.c  app_taskflow.h  app_tasklist.c  (+13 more)
examples/factory_firmware/main/sensor/: sensor_i2c.c  sensor_i2c.h  sensor_scd40.h  sensor_scd4x.h  sensor_sdc40.c  sensor_sdc4x.c  sensor_sht41.c  sensor_sht41.h
examples/factory_firmware/main/task_flow_engine/include/: tf.h  tf_module.h  tf_parse.h  tf_util.h
examples/factory_firmware/main/task_flow_engine/src/: tf.c  tf_parse.c  tf_util.c
examples/factory_firmware/main/task_flow_module/: tf_module_ai_camera.c  tf_module_ai_camera.h  tf_module_alarm.c  tf_module_alarm.h  tf_module_alarm_trigger.c  tf_module_alarm_trigger.h  tf_module_debug.c  tf_module_debug.h  tf_module_http_alarm.c  tf_module_http_alarm.h  tf_module_img_analyzer.c  tf_module_img_analyzer.h  tf_module_local_alarm.c  tf_module_local_alarm.h  tf_module_sensecraft_alarm.c  tf_module_sensecraft_alarm.h  tf_module_timer.c  tf_module_timer.h  tf_module_uart_alarm.c  tf_module_uart_alarm.h
examples/factory_firmware/main/task_flow_module/common/: tf_module_data_type.h  tf_module_util.c  tf_module_util.h
examples/factory_firmware/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.c
examples/factory_firmware/main/ui/components/: ui_comp.c  ui_comp_hook.c  ui_comp_menucomponent.c
examples/factory_firmware/main/ui/images/: ui_img_1721754357.c  ui_img_1870802764.c  ui_img_19533631.c  ui_img_1_png.c  ui_img_2022210068.c  ui_img_2_png.c  ui_img_335953020.c  ui_img_3_png.c  ui_img_457376777.c  ui_img_4_png.c  ui_img_5_png.c  ui_img_6_png.c  ui_img_app_qr_png.c  ui_img_apple1_png.c  ui_img_apple2_png.c  ui_img_appled1_png.c  ui_img_appled2_png.c  ui_img_appled3_png.c  ui_img_back1_png.c  ui_img_back2_png.c  ui_img_battery_1_png.c  ui_img_battery_2_png.c  ui_img_battery_3_png.c  ui_img_battery_4_png.c  ui_img_battery_5_png.c  ui_img_button_cancel_png.c  ui_img_cancel_png.c  ui_img_current_task_png.c  ui_img_dog_d_png.c  ui_img_gesture1_png.c  ui_img_gesture2_png.c  ui_img_gesture_detection1_png.c  ui_img_gesture_detection2_png.c  ui_img_gesture_detection3_png.c  ui_img_gesture_detection4_png.c  ui_img_gesture_detection5_png.c  ui_img_gesture_detection6_png.c  ui_img_gesture_png.c  ui_img_gesture_show_png.c  ui_img_gradient_png.c  (+29 more)
examples/factory_firmware/main/ui/screens/: ui_Page_Connect.c  ui_Page_HA.c  ui_Page_Set.c  ui_Page_ViewAva.c  ui_Page_ViewLive.c  ui_Page_Vir.c  ui_Page_Wifi.c  ui_Page_main.c  ui_atask_down.c  ui_ha.c  ui_ltask_back.c  ui_ltask_view.c  ui_ltaskscreen.c  ui_mainscreen.c  ui_nocurrentT.c  ui_preview_detection.c  ui_screen_preview.c  (+6 more)
examples/factory_firmware/main/util/: factory_info.c  factory_info.h  storage.c  storage.h  util.c  util.h  uuid.h
examples/factory_firmware/main/view/: CMakeLists.txt  view.c  view.h  view_alarm.c  view_alarm.h  view_group.c  view_group.h  view_image_preview.c  view_image_preview.h  view_pages.c  view_pages.h  view_status_bar.h
(+283 files in other folders)
