SET(SOURCES components/ui_comp_menucomponent.c
    components/ui_comp.c
    screens/ui_seeed_studio.c
    screens/ui_virtual.c
    screens/ui_mainscreen.c
    screens/ui_nocurrentT.c
    screens/ui_waitingtask.c
    screens/ui_atask_down.c
    screens/ui_preview_detection.c
    screens/ui_ltaskscreen.c
    screens/ui_ltask_view.c
    screens/ui_ltask_back.c
    screens/ui_ha.c
    screens/ui_setting.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_logo_png.c
    images/ui_img_onboard_demo_png.c
    images/ui_img_19533631.c
    images/ui_img_current_task_png.c
    images/ui_img_1721754357.c
    images/ui_img_2022210068.c
    images/ui_img_ha_png.c
    images/ui_img_setting_png.c
    images/ui_img_457376777.c
    images/ui_img_wifi_4_png.c
    images/ui_img_battery_5_png.c
    images/ui_img_cancel_png.c
    images/ui_img_human1_png.c
    images/ui_img_human2_png.c
    images/ui_img_apple1_png.c
    images/ui_img_apple2_png.c
    images/ui_img_gesture1_png.c
    images/ui_img_gesture2_png.c
    images/ui_img_back1_png.c
    images/ui_img_back2_png.c
    images/ui_img_setting__png.c
    images/ui_img_appled1_png.c
    images/ui_img_appled2_png.c
    images/ui_img_appled3_png.c
    images/ui_img_battery_1_png.c
    images/ui_img_battery_2_png.c
    images/ui_img_battery_3_png.c
    images/ui_img_battery_4_png.c
    images/ui_img_gesture_detection1_png.c
    images/ui_img_gesture_detection2_png.c
    images/ui_img_gesture_detection3_png.c
    images/ui_img_gesture_detection4_png.c
    images/ui_img_gesture_detection5_png.c
    images/ui_img_gesture_detection6_png.c
    images/ui_img_humand1_png.c
    images/ui_img_humand2_png.c
    images/ui_img_humand3_png.c
    images/ui_img_humand4_png.c
    images/ui_img_virtual1_png.c
    images/ui_img_virtual2_png.c
    images/ui_img_virtual3_png.c
    images/ui_img_virtual4_png.c
    images/ui_img_virtual5_png.c
    images/ui_img_virtual6_png.c
    images/ui_img_wifi_0_png.c
    images/ui_img_wifi_1_png.c
    images/ui_img_wifi_2_png.c
    images/ui_img_wifi_3_png.c
    images/ui_img_wifi_disconnect_png.c
    images/ui_img_wifi_nonnet_png.c
    fonts/ui_font_Font1.c
    )

add_library(ui ${SOURCES})
